fix(og-combobox): recalculate Flyout positioning
add calculting the correct position when inside a horizontal scroll area.
add closing Flyout when when the parent area is scrolled.

--- a/src/components/og-combobox/og-combobox.scss
+++ b/src/components/og-combobox/og-combobox.scss
@@ -291,7 +291,6 @@
 // Flyout List
 .og-combobox__flyout__list {
     margin: 0;
-    margin-top: 4px;
     padding: 0;
     list-style-type: none;
     display: none;
